Fixed spacing

--- a/Frontend/src/styles/components/_button.scss
+++ b/Frontend/src/styles/components/_button.scss
@@ -3,8 +3,9 @@
     font-size: 1.6rem;
     border-radius: 40px;
     padding: 20px;
-    background-color: #FC990B;
+    background-color: #FF550B;
     border: 0;
     position: relative;
     bottom: 0;
+    color: white;
 }
