--- a/Frontend/src/styles/components/_container.scss
+++ b/Frontend/src/styles/components/_container.scss
@@ -17,7 +17,7 @@
         background-size: cover;
         width: 100%;
         height: 100%;
-        opacity: .7;
+        opacity: .4;
         top: 0;
         left: 0;
         z-index: -2;
